--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Virtual Board Next Level</title>
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>Notes App</h1>
+    <h1>Virtual Board Next Level</h1>
 
     <div id="auth-section">
 
